--- a/index.html
+++ b/index.html
@@ -882,11 +882,6 @@
         let currentAssignmentType = null; // 'math', 'dictation', or 'lifeRule'
         let currentDictationTemplate = null; // For student dictation homework
 
-        // Quick links & work docs (loaded from Firestore)
-        let quickLinksData = [];
-        let sharedLinksData = [];
-        let workDocsData = [];
-
         // --- DOM Elements ---
         const views = {
             login: document.getElementById('login-view'),
@@ -1980,25 +1975,15 @@
         }
 
         let editingQuickLinkIndex = null;
-        let editingQuickLinkId = null;
         let editingShared = false;
         const userKey = base => currentUserData ? `${base}_${currentUserData.id}` : base;
 
-        async function loadQuickLinks() {
+        function loadQuickLinks() {
             const container = document.getElementById('quick-links');
-            if (!container || !currentUserData) return;
-            container.innerHTML = '<p class="text-sm text-gray-500">로딩 중...</p>';
-            try {
-                const q = query(collection(db, 'quickLinks'), where('teacherId', '==', currentUserData.id), orderBy('createdAt', 'desc'));
-                const snap = await getDocs(q);
-                quickLinksData = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-            } catch (error) {
-                console.error('Failed to load quick links', error);
-                container.innerHTML = '<p class="text-sm text-red-500">로딩 실패</p>';
-                return;
-            }
+            if (!container) return;
+            const links = JSON.parse(localStorage.getItem(userKey('teacherQuickLinks')) || '[]');
             container.innerHTML = '';
-            quickLinksData.forEach((link, idx) => {
+            links.forEach((link, idx) => {
                 const wrapper = document.createElement('div');
                 wrapper.className = 'relative group';
 
@@ -2022,14 +2007,12 @@
         function openQuickLinkModal(idx = null, shared = false) {
             editingQuickLinkIndex = idx;
             editingShared = shared;
-            editingQuickLinkId = null;
             const title = document.querySelector('#quick-link-modal h3');
             const delBtn = document.getElementById('delete-quick-link-btn');
-            const links = shared ? sharedLinksData : quickLinksData;
+            const links = JSON.parse(localStorage.getItem(shared ? 'sharedQuickLinks' : userKey('teacherQuickLinks')) || '[]');
 
             if (idx !== null && links[idx]) {
                 const link = links[idx];
-                editingQuickLinkId = link.id;
                 document.getElementById('quick-link-name').value = link.name || '';
                 document.getElementById('quick-link-image').value = link.image || '';
                 document.getElementById('quick-link-feature').value = link.feature || '';
@@ -2049,45 +2032,26 @@
             document.getElementById('quick-link-modal').style.display = 'flex';
         }
 
-        document.getElementById('add-quick-link-confirm-btn').addEventListener('click', async () => {
+        document.getElementById('add-quick-link-confirm-btn').addEventListener('click', () => {
             const name = document.getElementById('quick-link-name').value.trim();
             const image = document.getElementById('quick-link-image').value.trim();
             const feature = document.getElementById('quick-link-feature').value.trim();
             const url = document.getElementById('quick-link-url').value.trim();
             const color = document.getElementById('quick-link-color').value;
             if (!name || !url) { showModal('오류', '이름과 링크를 입력해주세요.'); return; }
-            try {
-                if (editingShared) {
-                    const data = { name, image, url, color, feature, author: currentUserData?.name || '익명', authorId: currentUserData?.id || '', createdAt: serverTimestamp() };
-                    if (editingQuickLinkId) {
-                        await setDoc(doc(db, 'sharedQuickLinks', editingQuickLinkId), data, { merge: true });
-                    } else {
-                        await addDoc(collection(db, 'sharedQuickLinks'), data);
-                    }
-                    await loadSharedLinks();
-                } else {
-                    const data = { name, image, url, color, feature, teacherId: currentUserData.id, createdAt: serverTimestamp() };
-                    if (editingQuickLinkId) {
-                        await setDoc(doc(db, 'quickLinks', editingQuickLinkId), data, { merge: true });
-                    } else {
-                        await addDoc(collection(db, 'quickLinks'), data);
-                    }
-                    await loadQuickLinks();
-                }
-                document.getElementById('quick-link-modal').style.display = 'none';
-                editingQuickLinkIndex = null;
-                editingQuickLinkId = null;
-                editingShared = false;
-            } catch (error) {
-                console.error('Failed to save quick link', error);
-                showModal('오류', '바로가기 저장 중 오류가 발생했습니다.');
+            const key = editingShared ? 'sharedQuickLinks' : userKey('teacherQuickLinks');
+            const links = JSON.parse(localStorage.getItem(key) || '[]');
+            if (editingQuickLinkIndex !== null) {
+                const existing = links[editingQuickLinkIndex] || {};
+                links[editingQuickLinkIndex] = editingShared
+                    ? { ...existing, name, image, url, color, feature }
+                    : { name, image, url, color, feature };
+            } else {
+                links.push(editingShared
+                    ? { name, image, url, color, feature, author: currentUserData?.name || '익명', authorId: currentUserData?.id || '' }
+                    : { name, image, url, color, feature });
             }
-        });
-
-        document.getElementById('delete-quick-link-btn').addEventListener('click', async () => {
-            if (!editingQuickLinkId) return;
-            const col = editingShared ? 'sharedQuickLinks' : 'quickLinks';
-            await deleteDoc(doc(db, col, editingQuickLinkId));
+            localStorage.setItem(key, JSON.stringify(links));
             if (editingShared) {
                 loadSharedLinks();
             } else {
@@ -2095,7 +2059,22 @@
             }
             document.getElementById('quick-link-modal').style.display = 'none';
             editingQuickLinkIndex = null;
-            editingQuickLinkId = null;
+            editingShared = false;
+        });
+
+        document.getElementById('delete-quick-link-btn').addEventListener('click', () => {
+            if (editingQuickLinkIndex === null) return;
+            const key = editingShared ? 'sharedQuickLinks' : userKey('teacherQuickLinks');
+            const links = JSON.parse(localStorage.getItem(key) || '[]');
+            links.splice(editingQuickLinkIndex, 1);
+            localStorage.setItem(key, JSON.stringify(links));
+            if (editingShared) {
+                loadSharedLinks();
+            } else {
+                loadQuickLinks();
+            }
+            document.getElementById('quick-link-modal').style.display = 'none';
+            editingQuickLinkIndex = null;
             editingShared = false;
         });
 
@@ -2110,15 +2089,12 @@
             document.getElementById('quick-link-share-space-modal').style.display = 'flex';
         }
 
-        async function loadSharedLinks() {
+        function loadSharedLinks() {
             const container = document.getElementById('shared-quick-link-list');
             if (!container) return;
-            container.innerHTML = '<p class="text-sm text-gray-500">로딩 중...</p>';
-            const q = query(collection(db, 'sharedQuickLinks'), orderBy('createdAt', 'desc'));
-            const snap = await getDocs(q);
-            sharedLinksData = snap.docs.map(d => ({ id: d.id, ...d.data() }));
+            const links = JSON.parse(localStorage.getItem('sharedQuickLinks') || '[]');
             container.innerHTML = '';
-            sharedLinksData.forEach((link, idx) => {
+            links.forEach((link, idx) => {
                 const btn = document.createElement('button');
                 btn.className = 'flex flex-col items-center p-2 rounded-md text-white';
                 btn.style.backgroundColor = link.color || '#3b82f6';
@@ -2131,7 +2107,8 @@
         let currentSharedIndex = null;
         function openSharedLinkDetail(idx) {
             currentSharedIndex = idx;
-            const link = sharedLinksData[idx];
+            const links = JSON.parse(localStorage.getItem('sharedQuickLinks') || '[]');
+            const link = links[idx];
             if (!link) return;
             document.getElementById('shared-detail-title').textContent = link.name;
             document.getElementById('shared-detail-feature').textContent = link.feature || '';
@@ -2145,16 +2122,18 @@
 
         function openShareOwnQuickLinkModal() {
             const container = document.getElementById('shareable-quick-links');
-            container.innerHTML = quickLinksData.map((l,i)=>`<div class="flex justify-between items-center border p-2 rounded"><span>${l.name}</span><button class="share-q-btn btn btn-primary" data-idx="${i}">공유</button></div>`).join('');
+            const links = JSON.parse(localStorage.getItem(userKey('teacherQuickLinks')) || '[]');
+            container.innerHTML = links.map((l,i)=>`<div class="flex justify-between items-center border p-2 rounded"><span>${l.name}</span><button class="share-q-btn btn btn-primary" data-idx="${i}">공유</button></div>`).join('');
             container.querySelectorAll('.share-q-btn').forEach(btn=>btn.addEventListener('click', e=>shareQuickLink(Number(e.target.dataset.idx))));
             document.getElementById('share-own-quick-link-modal').style.display = 'flex';
         }
 
-        async function shareQuickLink(idx) {
-            const link = quickLinksData[idx];
-            if (!link) return;
-            const data = { name: link.name, image: link.image, url: link.url, color: link.color, feature: link.feature, author: currentUserData?.name || '익명', authorId: currentUserData?.id || '', createdAt: serverTimestamp() };
-            await addDoc(collection(db, 'sharedQuickLinks'), data);
+        function shareQuickLink(idx) {
+            const myLinks = JSON.parse(localStorage.getItem(userKey('teacherQuickLinks')) || '[]');
+            const shared = JSON.parse(localStorage.getItem('sharedQuickLinks') || '[]');
+            const link = { ...myLinks[idx], author: currentUserData?.name || '익명', authorId: currentUserData?.id || '' };
+            shared.push(link);
+            localStorage.setItem('sharedQuickLinks', JSON.stringify(shared));
             document.getElementById('share-own-quick-link-modal').style.display = 'none';
             loadSharedLinks();
         }
@@ -2163,18 +2142,13 @@
         document.getElementById('close-share-own-quick-link-modal-btn').addEventListener('click', () => document.getElementById('share-own-quick-link-modal').style.display = 'none');
         document.getElementById('close-share-space-modal-btn').addEventListener('click', () => document.getElementById('quick-link-share-space-modal').style.display = 'none');
         document.getElementById('close-shared-link-detail-modal-btn').addEventListener('click', () => document.getElementById('shared-link-detail-modal').style.display = 'none');
-        document.getElementById('save-shared-link-btn').addEventListener('click', async () => {
-            const link = sharedLinksData[currentSharedIndex];
+        document.getElementById('save-shared-link-btn').addEventListener('click', () => {
+            const shared = JSON.parse(localStorage.getItem('sharedQuickLinks') || '[]');
+            const link = shared[currentSharedIndex];
             if (!link) return;
-            await addDoc(collection(db, 'quickLinks'), {
-                name: link.name,
-                image: link.image,
-                url: link.url,
-                color: link.color,
-                feature: link.feature,
-                teacherId: currentUserData.id,
-                createdAt: serverTimestamp()
-            });
+            const myLinks = JSON.parse(localStorage.getItem(userKey('teacherQuickLinks')) || '[]');
+            myLinks.push({ name: link.name, image: link.image, url: link.url, color: link.color, feature: link.feature });
+            localStorage.setItem(userKey('teacherQuickLinks'), JSON.stringify(myLinks));
             loadQuickLinks();
             document.getElementById('shared-link-detail-modal').style.display = 'none';
         });
@@ -2184,10 +2158,10 @@
             document.getElementById('shared-link-detail-modal').style.display = 'none';
         });
 
-        document.getElementById('remove-shared-link-btn').addEventListener('click', async () => {
-            const link = sharedLinksData[currentSharedIndex];
-            if (!link) return;
-            await deleteDoc(doc(db, 'sharedQuickLinks', link.id));
+        document.getElementById('remove-shared-link-btn').addEventListener('click', () => {
+            const links = JSON.parse(localStorage.getItem('sharedQuickLinks') || '[]');
+            links.splice(currentSharedIndex, 1);
+            localStorage.setItem('sharedQuickLinks', JSON.stringify(links));
             document.getElementById('shared-link-detail-modal').style.display = 'none';
             loadSharedLinks();
         });
@@ -2887,12 +2861,10 @@
 
         // --- Work Management ---
         let currentDraftIndex = null;
-        let currentDraftId = null;
         document.getElementById('open-draft-modal-btn').addEventListener('click', () => openDraftModal());
 
         function openDraftModal(index = null) {
             currentDraftIndex = index;
-            currentDraftId = null;
             draftModal.style.display = 'flex';
             const form = document.getElementById('draft-form');
             form.reset();
@@ -2907,9 +2879,9 @@
             attachmentContainer.classList.add('hidden');
 
             if(index !== null) {
-                const docData = workDocsData[index];
+                const docs = JSON.parse(localStorage.getItem(userKey('workDocs')) || '[]');
+                const docData = docs[index];
                 if(docData) {
-                    currentDraftId = docData.id;
                     document.getElementById('draft-subject').value = docData.subject;
                     document.getElementById('draft-notes').value = docData.notes;
                     if(docData.references && docData.references.length) {
@@ -3058,7 +3030,8 @@
         document.getElementById('copy-title-btn').addEventListener('click', () => navigator.clipboard.writeText(generatedTitle.textContent));
         document.getElementById('copy-body-btn').addEventListener('click', () => navigator.clipboard.writeText(generatedBody.textContent));
 
-        document.getElementById('save-draft-btn').addEventListener('click', async () => {
+        document.getElementById('save-draft-btn').addEventListener('click', () => {
+            const docs = JSON.parse(localStorage.getItem(userKey('workDocs')) || '[]');
             const docData = {
                 title: generatedTitle.textContent,
                 body: generatedBody.textContent,
@@ -3074,29 +3047,26 @@
                     name: item.querySelector('.attachment-name').value
                 }))
             };
-            if(currentDraftId) {
-                await setDoc(doc(db, 'workDocs', currentDraftId), { ...docData, teacherId: currentUserData.id }, { merge: true });
+            if(currentDraftIndex !== null) {
+                docs[currentDraftIndex] = docData;
             } else {
-                await addDoc(collection(db, 'workDocs'), { ...docData, teacherId: currentUserData.id, createdAt: serverTimestamp() });
+                docs.push(docData);
             }
-            currentDraftId = null;
+            localStorage.setItem(userKey('workDocs'), JSON.stringify(docs));
             draftModal.style.display = 'none';
             loadWorkDocs();
         });
 
-        async function loadWorkDocs() {
+        function loadWorkDocs() {
             const container = document.getElementById('work-doc-list');
-            if(!container || !currentUserData) return;
-            container.innerHTML = '<p class="text-center text-gray-500">목록을 불러오는 중...</p>';
-            const q = query(collection(db, 'workDocs'), where('teacherId', '==', currentUserData.id), orderBy('createdAt', 'desc'));
-            const snap = await getDocs(q);
-            workDocsData = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-            if(workDocsData.length === 0) {
+            const docs = JSON.parse(localStorage.getItem(userKey('workDocs')) || '[]');
+            if(!container) return;
+            if(docs.length === 0) {
                 container.innerHTML = '<p class="text-center text-gray-500">작성된 문서가 없습니다.</p>';
                 return;
             }
             container.innerHTML = '<div class="divide-y divide-gray-200">' +
-                workDocsData.map((d,i)=>`<div class="p-3 flex justify-between items-center"><span>${d.title}</span><button class="edit-draft-btn btn btn-secondary btn-xs" data-index="${i}">편집</button></div>`).join('') +
+                docs.map((d,i)=>`<div class="p-3 flex justify-between items-center"><span>${d.title}</span><button class="edit-draft-btn btn btn-secondary btn-xs" data-index="${i}">편집</button></div>`).join('') +
                 '</div>';
             container.querySelectorAll('.edit-draft-btn').forEach(btn => btn.addEventListener('click', e => {
                 const idx = Number(e.target.dataset.index);
